tests/errors/var_exist_54/e3.src
.IPPcode21


CREATEFRAME
DEFVAR TF@o
DEFVAR TF@v
PUSHFRAME
CONCAT LF@a string@abc string@efg
